--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "canal-plus",
-  "version": "0.0.0",
-  "private": true,
+  "name": "canal_plus",
+  "version": "1.0.0",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
-  }
+  "author": "Foster",
+  "license": "ISC",
+  "description": ""
 }
