--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "author": "Foster",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.19.2"
+  }
 }
