--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "handlebars": "^4.7.8",
+    "html2pdf.js": "^0.10.2"
   }
 }
