--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Foster",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "dependencies": {
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
-    "html2pdf.js": "^0.10.2"
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.1",
+    "puppeteer": "^22.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
