--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "chart.js": "^4.4.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.1",
-    "puppeteer": "^22.15.0"
+    "puppeteer": "^22.15.0",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
