--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "handlebars": "^4.7.8",
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.1",
+    "multer": "^1.4.5-lts.1",
     "puppeteer": "^22.15.0",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
